--- a/index.html
+++ b/index.html
@@ -5,8 +5,235 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hot Gadgets</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Gadgets</h1>
+    <div class="container">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">
+                <img src="images/logo.png" alt="">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Product</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">About Us</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link">Contact Us</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </div>
+
+    <section class="top-banner">
+      <div class="container">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="row align-items-center">
+                <div class="col-5">
+                  <div class="div">
+                  <h1 class="mac">Mackbook Pro</h1>
+                  <p class="card-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature.
+                  </p>
+                  <button class="buy-now-button">Buy Now ></button>
+                  </div>
+                </div>
+                <div class="col-2 d-flex justify-content-center best">
+                  <img src="images/bg-1.png" alt="">
+                </div>
+                <div class="col-5">
+                  <img src="images/banner-products/product-1.png" class="d-block w-100" alt="...">
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row align-items-center">
+                <div class="col-5">
+                  <h1 class="mac">Mackbook Pro</h1>
+                  <p class="card-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature.
+                  </p>
+                  <button class="buy-now-button">Buy Now ></button>
+                </div>
+                <div class="col-2 d-flex justify-content-center best">
+                  <img src="images/bg-1.png" alt="">
+                </div>
+                <div class="col-5">
+                  <img src="images/banner-products/slider-1.png" class="d-block w-100" alt="...">
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row align-items-center">
+                <div class="col-5">
+                  <h1 class="mac">Mackbook Pro</h1>
+                  <p class="card-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature.
+                  </p>
+                  <button class="buy-now-button">Buy Now ></button>
+                </div>
+                <div class="col-2 d-flex justify-content-center best">
+                  <img src="images/bg-1.png" alt="">
+                </div>
+                <div class="col-5">
+                  <img src="images/banner-products/slider-3.png" class="d-block w-100" alt="...">
+                </div>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </section>
+
+
+    <div class="container smart">
+      <div class="d-flex justify-content-between align-items-center">
+        <h3 class="cat">Smartphone</h3>
+        <a class="see" href="#">see all</a>
+      </div>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card shadow p-3 h-100 bg-body rounded">
+            <img src="images/phone/phone-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Xiaomi mi k20</h5>
+              <p class="card-text">Some quick example text to build on 
+                the card title.</p>
+                <h5 class="price">$999</h5>
+                <button class="buy-now-button">Buy Now ></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow p-3 h-100 bg-body rounded">
+            <img src="images/phone/phone-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Samsung Galaxy Note10+</h5>
+              <p class="card-text">Some quick example text to build on 
+                the card title.</p>
+                <h5 class="price">$899</h5>
+                <button class="buy-now-button">Buy Now ></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow p-3 h-100 bg-body rounded">
+            <img src="images/phone/phone-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Redmi note series</h5>
+              <p class="card-text">Some quick example text to build on 
+                the card title.</p>
+              <h5 class="price">$799</h5>
+              <button class="buy-now-button">Buy Now ></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="d-flex justify-content-between align-items-center">
+        <h3 class="cat">Laptops</h3>
+        <a class="see" href="#">see all</a>
+      </div>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card shadow p-3 h-100 bg-body rounded">
+            <img src="images/laptop/product-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Asus VivoBook</h5>
+              <p class="card-text">Some quick example text to build on
+                the card title.</p>
+                <h5 class="price">$799</h5>
+              <button class="buy-now-button">Buy Now ></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow p-3 h-100 bg-body rounded">
+            <img src="images/laptop/product-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Razer Blade 15</h5>
+              <p class="card-text">Some quick example text to build on
+                the card title.</p>
+                <h5 class="price">$799</h5>
+              <button class="buy-now-button">Buy Now ></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow p-3 h-100 bg-body rounded">
+            <img src="images/laptop/product-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Xiaomi Mi Notebook Pro</h5>
+              <p class="card-text">Some quick example text to build on
+                the card title.</p>
+                <h5 class="price">$799</h5>
+              <button class="buy-now-button">Buy Now ></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <h3 class="cat-3">Categories</h3>
+      <div class="row align-items-center">
+        <div class="col-3">
+          <div class=" bor-style h-style d-flex align-items-center flex-column shadow p-3 h-100 bg-body">
+            <img src="images/Categories/bag.png" class="img-fluid" alt="">
+           <h5>Bag</h5>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="bor-style1 h-style d-flex align-items-center flex-column shadow p-3 h-100 bg-body">
+            <img src="images/Categories/perfume.png" class="img-fluid" alt="">
+          <h5>Beauty</h5>
+          </div>
+          <div class="bor-style1 h-style d-flex align-items-center flex-column shadow p-3 h-100 bg-body">
+            <img src="images/Categories/shoe.png" class="img-fluid" alt="">
+          <h5>Shoes</h5>
+          </div>
+        </div>
+        <div class="col-6">
+          <img src="images/Categories/pale-order.png" class="img-fluid" alt="">
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
+
 </body>
 </html>
